--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 
 <body>
 <style>
-	.inp { width:200px; padding:5px; line-height:20px; border:1px solid #ccc; }
-	.m_pLevelBar { width:212px; height:2px; margin:0; background:#ccc; }
-	.m_pLevelColor { height:2px; }
+	.inp { width:200px; padding:5px; line-height:20px; border:1px solid #ccc; border-bottom:0; margin-right:10px; }
+	.m_pBar { position:relative; }
+	.m_pBar .ic_eyes { position:absolute; left:180px; top:2px; width:30px; line-height:25px; font-size:24px; text-align:center; text-decoration:none; color:#000; background:#fff; }
+	.m_pLevelBar { width:212px; height:3px; margin:0; background:#ccc; }
+	.m_pLevelColor { display:block; width:0; height:3px; }
+	.u_tips { font-size:12px; }
 	@font-face {font-family: 'iconfont';
 		src: url('fonts/iconfont.eot'); /* IE9*/
 		src: url('fonts/iconfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
@@ -20,12 +23,18 @@
 		url('fonts/iconfont.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
 		url('fonts/iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */
 	}
+	.iconfont{
+    font-family:"iconfont" !important;
+    font-size:16px;font-style:normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0.2px;
+    -moz-osx-font-smoothing: grayscale;}
 </style>
 	<div>
 		<input type="password" id="password" class="inp"/>
 	</div>
 	<script src="http://whj.fayfox.com/js/jquery-1.8.3.js" type="text/javascript"></script>
-	<script type="text/javascript" src="js/passwordStrength.js"></script>
+	<script type="text/javascript" src="js/jquery.passwordStrength.js" charset="utf-8"></script>
 	<script type="text/javascript">
 		$("#password").passwordStrength();
 		$("#password").focus();
